<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="updateMotors" Id="{113379e0-5e5f-48bf-b344-8890dfe42f80}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM updateMotors
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL_devices.fbLftWidthMotor();
GVL_devices.fbRhtWidthMotor();

GVL_devices.fbLftClampMotor();
GVL_devices.fbRhtClampMotor();

GVL_devices.fbLftRotationMotor();	
GVL_devices.fbRhtRotationMotor();	

GVL_devices.fbColumn0Motor();	
GVL_devices.fbColumn1Motor();	
GVL_devices.fbColumn2Motor();	
GVL_devices.fbColumn3Motor();	]]></ST>
    </Implementation>
    <LineIds Name="updateMotors">
      <LineId Id="6" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>